# tiny-postgres

./: .gitignore  .gitmodules  MANIFEST.in  pyproject.toml  setup.py
tiny_postgres/: __init__.py  __main__.py  db_config.py  db_status.py  env.py
