[project]
name = "tiny-postgres"
version = "0.1.0"
description = "A tiny, self-contained, postgres server for testing"
authors = [{name = "Soof Golan", email = "pip@soofgolan.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer[all] >= 0.7.0,<1.0.0",
    "pg8000 >= 1.29.4,<2.0.0",
    "retry >= 0.9.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black >= 23.3.0,<24.0.0",
    "ruff >= 0.0.260,<1.0.0",
    "build >= 0.7.0,<1.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tiny_postgres"]
